# indosanca

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
asset/: bantuan.txt  kode_error.txt  main.rs  node
src/: baca.rs  baca_pohon.rs  codeart.rs  con_read.rs  con_write.rs  dok.rs  error.rs  file_management.rs  jalankan.rs  js.rs  konversi.rs  lexer.rs  lexerjson.rs  main.rs  parsejson.rs  parser.rs  parsing.rs  pohon.rs  pohon_.rs  priparsing.rs  seting.rs  token_read.rs  tulis_ke.rs
src/file_management/: baca.rs  hapus_baris.rs  index.rs  index_2.rs  kode.rs  kode_2.rs  kode_3.rs  parse.rs  pohon.rs  seting.rs  tulis_ke.rs
src/konversi/: cpp.rs  interperetasi.rs  nativ.rs  pwa.rs  pwa_op.rs  pwa_op_2.rs  pwanode.rs  wasm.rs  web.rs  web_2.rs  x86_64.rs
src/parsing/: lexer.rs  lexer_2.rs  lexer_3.rs  parse.rs  parse_1.rs  parse_2.rs  parse_3.rs  parse_3_1.rs  parse_3_2.rs  pohon.rs
std/: seting.toml
std/kode/: std
std/parsing/: parse_2
test/: config.txt
test/main/: main
testing/buat_variabel/kode/: main
testing/buat_variabel/parsing/: parse_2
testing/buat_variabel/parsing/pwa/: main.wat  sw.js
testing/buat_variabel/parsing/pwa/instruksi/: main
testing/duplikat/: lexer  parser  seting.toml
testing/duplikat/kode/: main.is
testing/duplikat/parsing/: lexer
testing/halo_dunia/kode/: main
testing/hello/: indeks  lexer  parser  seting.toml
testing/hello/kode/: main.is
testing/hello/parsing/: lexer  parser
testing/jika_dasar/kode/: main
testing/logika/kode/: main.is
testing/loop_dasar/code/: main
testing/mod/kode/: main.is
testing/mod/parsing/: lexer
testing/parsing_kepemilikan_1/kode/: main.is
testing/parsing_kepemilikan_1/parsing/: parse_2
testing/parsing_salah_tipe/kode/: main.is
testing/proyek/: .gitignore
testing/proyek/kode/: main.is
testing/putar/kode/: main.is
testing/testing/: seting.toml
testing/testing/kode/: main  main.is  test
testing/var/: lexer  parser
testing/var/kode/: main.is
testing/var_deklarasi/kode/: main.is
testing/var_deklarasi/parsing/: parse  parse_2
testing/var_tulis_ulang_gagal/: seting.toml
testing/var_tulis_ulang_gagal/kode/: main.is
testing/var_tulis_ulang_mut/kode/: main.is
testing/var_tulis_ulang_mut/parsing/: parse  parse_2
testing/wasm/: main.wasm  main.wat
