[package]
name = "indosanca"
version = "0.3.0"
authors = ["rifqi nugraha"]
edition = "2018"
repository = "https://github.com/rifqideveloper/indosanca.git"
license = "MIT"
categories = ["command-line-utilities", "compiler","programming_language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
toml = "0.5"
serde_json = "1.0.64"
serde_derive = "1.0.125"
serde = { version = "1.0", features = ["derive"] }
wat = "1.0"
meval = "0.2"
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
